--- a/style.css
+++ b/style.css
@@ -599,3 +599,243 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   opacity: 0.3;
 }
+
+.carousel-ser{
+  display: block;
+  width: 100%;
+}
+
+.carousel-ser .container{
+  height: 350px;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  padding-left: 100px;
+  overflow: hidden;
+}
+
+/* .carousel-ser .container::after{
+  content: "";
+  position: absolute;
+  background-image: ;
+} */
+
+.carousel-ser .container .col-right{
+  display: block;
+  width: 60%;
+}
+
+.carousel-ser .container .col-right img{
+  height: auto;
+}
+
+/* .carousel-ser .container .col-right::before{
+  content: "";
+  position: absolute;
+  background-image: url(./image/b4.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+} */
+
+.carousel-ser .back-to-home{
+  position: relative;
+  transition: all 0.5s;
+  text-decoration: none;
+  color: grey;
+}
+
+.carousel-ser .back-to-home:hover{
+  position: absolute;
+  color: #fb811e;
+}
+
+.choose-ser .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0 50px;
+    margin-top: 100px;
+}
+
+.choose-ser .container .col {
+  width: calc(100% / 3);
+  padding: 30px 100px;
+  margin-right: 20px;
+  margin-bottom: 30px;
+  border: transparent;
+  transition: all 0.6s;
+  border: 1px solid transparent;
+  position: relative;
+}
+
+.choose-ser .container .col::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 20px 20px 20px 20px  rgb(0 0 0 / 10%);
+  opacity: 0.2;
+  border-radius: 20px;
+  transition: all 0.5s;
+}
+
+.choose-ser .container .col:hover::before{
+  opacity: 0.8;
+  position: absolute;
+}
+
+.choose-ser .container .col a{
+  position: relative;
+  font-size: 22px;
+  font-weight: bold;
+  transition: all 0.5s;
+  text-decoration: none;
+  color: #000000;
+}
+
+.choose-ser .container .col a::before{
+  content: " ";
+  position: absolute;
+  text-decoration: none;
+}
+
+.choose-ser .container .col a:hover{
+  color: #fb811e;
+}
+
+.choose-ser .container .col i{
+  font-size: 40px;
+  color: #fb811e;
+  padding: 15px 0;
+}
+
+.choose-ser .container .col p{
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.why-choose-ser {
+  position: relative;
+}
+
+.why-choose-ser .container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 100px auto;
+  padding: 0 80px;
+}
+
+.why-choose-ser .container .content {
+  width: 50%;
+}
+
+.why-choose-ser .container .content h5 {
+  color: #fb811e;
+}
+
+.why-choose-ser .container .content p {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.why-choose-ser .container .content h1,
+.why-choose-ser .container .text span {
+  font-weight: bold;
+}
+
+.why-choose-ser .container .text span {
+  font-size: 22px;
+}
+
+.why-choose-ser .container img {
+  width: 45%;
+  border-radius: 30px;
+}
+
+.why-choose-ser .container .content .text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 50px auto;
+}
+
+.why-choose-ser .container .content .text-left,
+.why-choose-ser .container .content .text-right {
+  display: flex;
+}
+
+.why-choose-ser .container .content .text-span {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.why-choose-ser .container .content .text i {
+  font-size: 30px;
+  color: #fb811e;
+  margin-right: 10px;
+}
+
+.why-choose-ser .statistic {
+  color: #ffffff;
+  background-color: #fb811e;
+  width: 300px;
+  padding: 30px;
+  position: absolute;
+  bottom: 40px;
+  right: 28%;
+  border-radius: 0 0 100px 0;
+  text-align: center;
+}
+
+.why-choose-ser .statistic h1 {
+  font-size: 70px;
+}
+
+.why-choose-ser .statistic * {
+  font-weight: bold;
+}
+
+.call-back button {
+  background-color: #fb811e;
+  border: none;
+  transition: all 0.8s;
+}
+
+.call-back button:hover {
+  background-color: green;
+}
+
+.call-back .container{
+  background-image: url(https://wp.w3layouts.com/farmstead/wp-content/themes/farmstead/assets/images/bg2.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 400px;
+  display: block;
+  max-width: 100%;
+  position: relative;
+ }
+
+.call-back .container::before{
+  content: " ";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  z-index: 10;
+  margin: 0;
+  padding: 0;
+}
+
+.call-back .container .txt{
+  z-index: 11;
+}
