--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ body {
   align-items: center;
 }
 
-.what-we-do .container h2,
+.what-we-do .container h2, .what-we-do .container h3,
 .what-we-do .container .text .col-left,
 .what-we-do .container .text .col-right {
   padding-left: 100px;
@@ -560,13 +560,99 @@ body {
   padding: 50px 100px;
 }
 
-.footer .container p{
+.footer .container p {
   color: gray;
+  font-weight: 100;
+  margin: 0;
 }
 
-.footer ,.container h5{
+.footer,
+.container h5 {
   font-weight: bold;
 }
+
+.footer .container .col-mid .w3layout{
+  text-decoration: none;
+  color: #009f4d;
+  transition: all 0.5s;
+}
+
+.footer .container .col-mid .w3layout:hover{
+  color: #fb811e;
+}
+
+.footer .search-engine {
+  display: flex;
+  justify-content: flex-start;
+  margin: 15px 0;
+}
+
+.footer .search-engine input {
+  background-color: #f4f4f4;
+  border: 1px solid #eee;
+  border-radius: 25px 0 0 25px;
+  padding: 5px 30px;
+}
+
+.footer .container .col-right a {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(10 191 83 / 8%);
+  border-radius: 50%;
+  text-align: center;
+  display: inline-block;
+}
+
+.footer .container .search-engine button {
+  background-color: #009f4d;
+  width: 70px;
+  height: 50px;
+  border: none;
+  border-radius: 0 25px 25px 0;
+  position: relative;
+}
+
+.footer .container .search-engine button::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  opacity: 0;
+  transition: all 0.5s;
+  transform: translateY(-13px);
+}
+
+.footer .container .search-engine button:hover::before {
+  opacity: 1;
+}
+
+.footer .container .search-engine i {
+  color: #ffffff;
+  width: 100%;
+}
+
+.footer .container .col-right .navbar {
+  display: block;
+}
+
+.footer .container .navbar i {
+  display: inline-block;
+  font-size: 15px;
+  color: #009f4d;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  line-height: 40px;
+  transition: all 0.5s;
+}
+
+.footer .container .navbar i:hover {
+  color: #fb811e;
+  background-color: #f9ebc0;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
 
 .back-to-top {
   background-color: #009f4d;
@@ -600,12 +686,12 @@ body {
   opacity: 0.3;
 }
 
-.carousel-ser{
+.carousel-ser {
   display: block;
   width: 100%;
 }
 
-.carousel-ser .container{
+.carousel-ser .container {
   height: 350px;
   max-width: 100%;
   display: flex;
@@ -613,53 +699,42 @@ body {
   align-items: center;
   margin: 0;
   padding: 0;
-  padding-left: 100px;
+  padding-left: 120px;
   overflow: hidden;
 }
 
-/* .carousel-ser .container::after{
-  content: "";
-  position: absolute;
-  background-image: ;
-} */
-
-.carousel-ser .container .col-right{
+.carousel-ser .container .col-right {
   display: block;
   width: 60%;
+  height: 100%;
+  position: relative;
 }
 
-.carousel-ser .container .col-right img{
-  height: auto;
-}
-
-/* .carousel-ser .container .col-right::before{
-  content: "";
-  position: absolute;
-  background-image: url(./image/b4.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+.carousel-ser .container .col-right img {
+  display: inline;
   width: 100%;
-} */
+  height: 100%;
+  border-radius: 0 0 15px 15px;
+}
 
-.carousel-ser .back-to-home{
+.carousel-ser .back-to-home {
   position: relative;
   transition: all 0.5s;
   text-decoration: none;
   color: grey;
 }
 
-.carousel-ser .back-to-home:hover{
+.carousel-ser .back-to-home:hover {
   position: absolute;
   color: #fb811e;
 }
 
 .choose-ser .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 0 50px;
-    margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0 50px;
+  margin-top: 100px;
 }
 
 .choose-ser .container .col {
@@ -673,25 +748,25 @@ body {
   position: relative;
 }
 
-.choose-ser .container .col::before{
+.choose-ser .container .col::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 20px 20px 20px 20px  rgb(0 0 0 / 10%);
+  box-shadow: 20px 20px 20px 20px rgb(0 0 0 / 10%);
   opacity: 0.2;
   border-radius: 20px;
   transition: all 0.5s;
 }
 
-.choose-ser .container .col:hover::before{
+.choose-ser .container .col:hover::before {
   opacity: 0.8;
   position: absolute;
 }
 
-.choose-ser .container .col a{
+.choose-ser .container .col a {
   position: relative;
   font-size: 22px;
   font-weight: bold;
@@ -700,23 +775,23 @@ body {
   color: #000000;
 }
 
-.choose-ser .container .col a::before{
+.choose-ser .container .col a::before {
   content: " ";
   position: absolute;
   text-decoration: none;
 }
 
-.choose-ser .container .col a:hover{
+.choose-ser .container .col a:hover {
   color: #fb811e;
 }
 
-.choose-ser .container .col i{
+.choose-ser .container .col i {
   font-size: 40px;
   color: #fb811e;
   padding: 15px 0;
 }
 
-.choose-ser .container .col p{
+.choose-ser .container .col p {
   color: rgba(0, 0, 0, 0.5);
 }
 
@@ -808,32 +883,93 @@ body {
   background-color: #fb811e;
   border: none;
   transition: all 0.8s;
+  display: block;
 }
 
 .call-back button:hover {
   background-color: green;
 }
 
-.call-back .container{
+.call-back{
+  display: block;
+  height: 500px;
   background-image: url(https://wp.w3layouts.com/farmstead/wp-content/themes/farmstead/assets/images/bg2.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 400px;
-  display: block;
-  max-width: 100%;
   position: relative;
- }
-
-.call-back .container::before{
-  content: " ";
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  position: absolute;
-  z-index: 10;
-  margin: 0;
-  padding: 0;
-  display: block;
 }
 
+.call-back .container {
+  height: 100%;
+  max-width: 100%;
+  color: #ffffff;
+  padding: 0 100px;
+  margin: 0;
+  position: relative;
+}
+
+.call-back::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.statistic-ser{
+  display: block;
+  margin-bottom: 50px;
+}
+
+.statistic-ser .container{
+  padding: 48px 120px;
+  margin: 0;
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.statistic-ser .container .col{
+  width: 25%;
+  text-align: center;
+  padding: 0;
+}
+
+.statistic-ser .container .col i{
+  font-size: 30px;
+  width: 80px;
+  height: 80px;
+  color: #009f4d;
+  background-color: rgb(10 191 83 / 4%);
+  line-height: 80px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.naturally-ser .container{
+  padding: 20px 50px;
+}
+
+.naturally-ser .container h1, .statistic-ser .container .col h1{
+  font-weight: bold;
+}
+
+.naturally-ser .container img{
+  border-radius: 15px;
+}
+
+.team-about h4 {
+  position: absolute;
+  top: 50px;
+  left: 400px;
+  font-size: 160px;
+  color: #ffffff;
+  opacity: 0.1;
+  font-weight: bold;
+}
+
+.team-about .col-about{
+  
+}
